[20240614] 플레이어 수정

--- a/2024Project/2024Project.vcxproj
+++ b/2024Project/2024Project.vcxproj
@@ -23,6 +23,7 @@
     <ClInclude Include="GameLogic.h" />
     <ClInclude Include="MapLogic.h" />
     <ClInclude Include="TitleScene.h" />
+    <ClInclude Include="Logic.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="console.cpp" />
