--- a/2024Project/2024Project.vcxproj
+++ b/2024Project/2024Project.vcxproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ClInclude Include="console.h" />
     <ClInclude Include="GameLogic.h" />
+    <ClInclude Include="GameOver.h" />
     <ClInclude Include="MapLogic.h" />
     <ClInclude Include="TitleScene.h" />
     <ClInclude Include="Logic.h" />
@@ -28,6 +29,7 @@
   <ItemGroup>
     <ClCompile Include="console.cpp" />
     <ClCompile Include="GameLogic.cpp" />
+    <ClCompile Include="GameOver.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MapLogic.cpp" />
     <ClCompile Include="TitleScene.cpp" />
