--- a/2024Project/2024Project.vcxproj
+++ b/2024Project/2024Project.vcxproj
@@ -25,6 +25,7 @@
     <ClInclude Include="MapLogic.h" />
     <ClInclude Include="TitleScene.h" />
     <ClInclude Include="Logic.h" />
+    <ClInclude Include="mci.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="console.cpp" />
@@ -32,6 +33,7 @@
     <ClCompile Include="GameOver.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MapLogic.cpp" />
+    <ClCompile Include="mci.cpp" />
     <ClCompile Include="TitleScene.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
