--- a/2024Project/2024Project.vcxproj.filters
+++ b/2024Project/2024Project.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="Logic.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="GameOver.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="console.cpp">
@@ -45,6 +48,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="MapLogic.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="GameOver.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
